# pipes-irc

./: .gitignore  README.md  pipes-irc.cabal
src/Control/Proxy/: IRC.hs
src/Control/Proxy/IRC/: Proxies.hs  Run.hs  Types.hs  Util.hs
src/Control/Proxy/IRC/Internal/: Parser.hs
src/Pipes/Network/: IRC.hs
src/Pipes/Network/IRC/: Core.hs  Run.hs  Types.hs  Util.hs
src/Pipes/Network/IRC/Internal/: Parser.hs
