name:                pipes-irc
version:             0.1.0

synopsis:            A Proxy interface to the Internet Relay Chat

license:             BSD3
license-file:        LICENSE

author:              Dan Frumin
maintainer:          difrumin@gmail.com

category:            Network

build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:    Control.Proxy.IRC,
                      Control.Proxy.IRC.Types,
                      Control.Proxy.IRC.Proxies,
                      Control.Proxy.IRC.Run,
                      Control.Proxy.IRC.Util
  
  other-modules:      Control.Proxy.IRC.Internal.Parser
  
  build-depends:       base > 4.5,
                       pipes >=4,
                       pipes-network ==0.6.*,
                       network,
                       safe,
                       bytestring,
                       containers,
                       attoparsec,
                       errors,
                       mtl >= 2.2.1,
                       transformers ==0.4.*
  
  hs-source-dirs:      src
  
