name:                pipes-irc
version:             0.1

synopsis:            Pipes interface to the Internet Relay Chat

license:             BSD3
license-file:        LICENSE

author:              Dan Frumin
maintainer:          difrumin@gmail.com

category:            Network

build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:    Pipes.Network.IRC,
                      Pipes.Network.IRC.Types,
                      Pipes.Network.IRC.Core,
                      Pipes.Network.IRC.Run,
                      Pipes.Network.IRC.Util
  
  other-modules:      Pipes.Network.IRC.Internal.Parser
  
  build-depends:       base > 4.5,
                       pipes >=4,
                       pipes-network ==0.6.*,
                       network,
                       bytestring,
                       containers,
                       attoparsec,
                       mtl >= 2.2.1
  
  hs-source-dirs:      src
  
